Fixed button problem-Removed modal-wrapper class and moved all css to the modal parents(lines 410-469) on index.css. Problem was the display:none was overlapping with some hide() show() functions.

--- a/public/index.css
+++ b/public/index.css
@@ -411,21 +411,49 @@ h4.authorName1{
   text-align: center;
   width: 100%;
   height: 100%;
+  display: none;
+  transition: all 0.3s ease-in-out;
+  background-color: transparent;
+ /* display: block;*/
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(20, 19, 20);
+  overflow-y:scroll;
 }
 
 .modalParent2{
   text-align: center;
   width: 100%;
   height: 100%;
-}
-
-.modal-wrapper {
   display: none;
   transition: all 0.3s ease-in-out;
   background-color: transparent;
+ /* display: block;*/
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(20, 19, 20);
+  overflow-y:scroll;
 }
 
-.modal-wrapper.is-open {
+/*.modal-wrapper {
+  display: none;
+  transition: all 0.3s ease-in-out;
+  background-color: transparent;
+}*/
+
+/*.modal-wrapper.is-open {
   display: block;
   position: fixed;
   z-index: 1;
@@ -438,7 +466,7 @@ h4.authorName1{
   background-color: rgb(20, 19, 20);
   overflow-y:scroll;
 
-}
+}*/
 
 .modal-body {
   animation: pop 0.5s ease;
